--- a/css/main.css
+++ b/css/main.css
@@ -165,15 +165,15 @@ nav ul li a:hover {
     background-color:  #5cb85c; 
 } 
 .progress-5 { 
-    background-color:  #0023e9; 
+    background-color:  #5cb85c; 
 } 
 
 .progress-1 { width: 100%; }
 .progress-2 { width: 100%; }
-.progress-3 { width: 100%; }
+.progress-3 { width: 0%; }
 .progress-4 { width: 100%; } 
-.progress-5 { width: 0%; }
-.progress-6 { width: 0%; }
+.progress-5 { width: 100%; }
+.progress-6 { width: 100%; }
 
 
 /* --- 4. Estilos del Proyecto Final (Caja) --- */
