--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,6 @@ nav ul li a:hover {
 .progress-1 { 
     background-color: #5cb85c;
 } 
-
 .progress-2 { 
     background-color:  #5cb85c; 
 } 
@@ -165,6 +164,9 @@ nav ul li a:hover {
     background-color:  #5cb85c; 
 } 
 .progress-5 { 
+    background-color:  #5cb85c; 
+} 
+.progress-6 { 
     background-color:  #5cb85c; 
 } 
 
